# gitualizer

./: .gitignore  README.md  pyproject.toml
src/gitualizer/: __init__.py  __main__.py
src/gitualizer/app/: main.py
src/gitualizer/git/: __init__.py  repository.py  runner.py
src/gitualizer/model/: __init__.py  repository_state.py
src/gitualizer/operations/: __init__.py  command_plan.py  executor.py  planner.py
src/gitualizer/ui/: drag_mime.py  file_status_widget.py  graph_widget.py  main_window.py  stash_widget.py
tests/: test_git_runner.py  test_graph_widget.py  test_operation_executor.py  test_operation_planner.py  test_repository_reader.py  test_ui_helpers.py
